syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message ForgeQueueData {
	uint32 total_finish_timestamp = 5;
	uint32 unfinish_count = 11;
	uint32 next_finish_timestamp = 15;
	uint32 queue_id = 1;
	uint32 finish_count = 9;
	uint32 forge_id = 4;
	uint32 avatar_id = 14;
}