syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message NpcTalkReq {
	uint32 talk_id = 8;
	uint32 npc_entity_id = 15;
	uint32 entity_id = 3;
}