syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message NpcTalkRsp {
	int32 retcode = 8;
	uint32 cur_talk_id = 13;
	uint32 npc_entity_id = 6;
	uint32 entity_id = 11;
}